{
  "version": 4,
  "terraform_version": "1.5.0",
  "serial": 187,
  "lineage": "78017ce7-08bd-d28f-44fb-d583d94924f5",
  "resources": [
    {
      "module": "module.eks-cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks-master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:051725806636:security-group/sg-090809eafc51a45aa",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-090809eafc51a45aa",
            "ingress": [],
            "name": "uat-munna-rnd-eks-master",
            "name_prefix": "",
            "owner_id": "051725806636",
            "revoke_rules_on_delete": false,
            "tags": {
              "Cost-Center": "munna",
              "Environment": "uat",
              "Name": "uat-munna-rnd-eks-cluster",
              "Owner": "SE",
              "Project": "munna-rnd",
              "ResourceType": "EKS-cluster-resource",
              "Version": "0.0.1"
            },
            "tags_all": {
              "Cost-Center": "munna",
              "Environment": "uat",
              "Name": "uat-munna-rnd-eks-cluster",
              "Owner": "SE",
              "Project": "munna-rnd",
              "ResourceType": "EKS-cluster-resource",
              "Version": "0.0.1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0194d1b660005a311"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.eks-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "eks-master-egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-201265354",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-090809eafc51a45aa",
            "security_group_rule_id": "sgr-04673a8e6fef067e5",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-cluster.aws_security_group.eks-master"
          ]
        }
      ]
    },
    {
      "module": "module.eks-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "eks-master-self-vpc-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 0,
            "id": "sgrule-1592604788",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-090809eafc51a45aa",
            "security_group_rule_id": "sgr-04f5662e20a442f20",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-cluster.aws_security_group.eks-master"
          ]
        }
      ]
    },
    {
      "module": "module.eks-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "mip-vpc-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.144.160.0/20"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-2376804719",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-090809eafc51a45aa",
            "security_group_rule_id": "sgr-0fadc6f2fbd5af56f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks-cluster.aws_security_group.eks-master"
          ]
        }
      ]
    }
  ]
}